random_stuffs/keyclock-setup/3.with-ssl-domain-mysql/3.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-keycloak-ns
  rules:
  - host: erpnext.anwarlabs.com
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /keycloak/(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /(.*)
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - erpnext.anwarlabs.com
      secretName: letsencrypt-prod
